blog/static/css/blog.css
html * {
    font-family: 'liberation_sans_webfont';
}

body{
  color: #222222;
  background-color: #ffffff;
}

.body-dark{
  color: #eeeeee;
  background-color: #121212;
}

.link {
    color:#222222;
}

.link-dark{
    color:#eeeeee;
}

.theme-switcher {
    display: inline-block;
    *display: inline;
    position: absolute;
    right: 0.5vw;
    padding-top: 0vw;
}

#btn-theme-switcher{
    width: 4vw;
    height: 4vw;
    border: none;
    background:none;
}

#btn-theme-switcher::before {
    font-family: fontAwesome;
    content: "\f186";
    font-size: 3.5vw;
}

.btn-theme-switcher-dark::before {
    font-family: fontAwesome;
    content: "\f185" !important;
    font-size: 3.5vw;
}

.post {
    margin-bottom: 1.5vw;
    margin-left: -19vw;
    height:5vw;
    min-width:2vw;
}

.post h2 a, .post h2 a:visited {
    color: #222222;
}

.post-dark h2 a, .post-dark h2 a:visited {
    color: #eeeeee;
}

.footer-item, .footer-item-dark {    
    font-size: 0.7vw;
    display: inline-block;
    *display: inline;
    zoom: 1;
}

.footer-item{
    color: #222222;
}

.footer-item-dark {
    color: #eeeeee !important;
}

#edit-pencil{
    position:fixed;
    top:7vw;
    right:0.5vw;
    width:3.5vw;
    height:3.5vw;
    font-size:2.5vw;
    background:none;
    color:black;
}

.edit-pencil-dark {
    color:white !important;
}

/*Everything below shouldn't need to change with dark-theme*/
.page-header {
    background-color: #276F02;
    margin-top: 0vw;
    padding : 0vw 0vw 1vw 0vw;
}

#new-plus {
    color:white;
    width:2vw;
    height:3vw;
    font-size:2.5vw;
    padding: 0vw 1vw 0vw 0.5vw;
}

.btn-default:hover {
    background:none;
}

.title {
    display: inline-block;
    *display: inline;
}

.title h1, .title h1 a, .title h1 a:visited, .title h1 a:active {
    color: #ffffff;
    font-size: 2.5vw;
    font_weight: bold;
    text-decoration: none;
    padding-left:0.5vw;
}

.page-container {
  position: relative;
  min-height: 100%;
}

.content-container {
    padding-bottom: 2.5rem;
}

.date {
    color: #828282;
    margin-bottom:-0.75vw;
    margin-left:0.1vw;
}

.save {
    float: right;
}

.post-form textarea, .post-form input {
    width: 100%;
}

.footer {
  position: fixed;
  bottom: 0;
  width: 100&;
  height: 2.5rem;
  text-align: justify;
  -ms-text-justify: distribute-all-lines;
  text-justify: distribute-all-lines;
  min-width: 100%;
  padding-left: 0.5vw;
  padding-right: 0.5vw;
}

.distribute {
    width: 100%;
    display: inline-block;
    *display: inline;
    font-size: 0;
    line-height: 0;
    bottom: 0;
}

@font-face {
    font-family: 'liberation_sans_webfont';
    src: 
        url(fonts/LiberationSans-Regular-webfont.ttf) format('truetype'),
        url(fonts/LiberationSans-Regular-webfont.woff) format('woff');
    font-weight: normal;
    font-style: normal;
}
         
@font-face {
    font-family: 'liberation_sans_webfont';
    src: 
        url(fonts/LiberationSans-Bold-webfont.ttf) format('truetype'),
        url(fonts/LiberationSans-Bold-webfont.woff) format('woff'),
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: 'liberation_sans_webfont';
    src: 
        url(fonts/LiberationSans-Italic-webfont.ttf) format('truetype'),
        url(fonts/LiberationSans-Italic-webfont.woff) format('woff'),
    font-weight: normal;
    font-style: italic;
}

@font-face {
    font-family: 'liberation_sans_webfont';
    src: 
        url(fonts/LiberationSans-BoldItalic-webfont.ttf) format('truetype'),
        url(fonts/LiberationSans-BoldItalic-webfont.woff) format('woff'),
    font-weight: bold;
    font-style: italic;
}

